--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,9 +1,7 @@
-.content {
-   width: 800px;
-} 
 
 .portfolio-img {
-  max-width: 50%;
+  width: 50%;
+  height: 55%;
   box-shadow: 0px 1px 3px 0px #A0A0A0;
   margin: 10px 0;
 }
